--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3284,5 +3284,5 @@
     "static.priority.low": "Low",
     "static.priority.lowDesc": "Problem is noticeable but not critical to daily operations and would be good to fix eventually. (Affects a non-business-critical function).",
     "static.scenarioPlanning.tab1":"Scenario Supply Plan",
-    "static.scenarioPlanning.tab2":"Local/Server Supply Plan - V"
+    "static.scenarioPlanning.tab2":"Local/Server Supply Plan - v"
 }
