--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -219,6 +219,7 @@
     "static.translations.translations": "Translations",
     "static.mt.tab1DetailPurpose": "Use this screen to link QAT shipments with ERP orders for the first time. Users will see a list of QAT shipments, and when a user clicks on a single QAT shipment, they can then choose which ERP orders that QAT shipment should be linked with.  ",
     "static.region.capacitycbm": "Volume (m^3)",
+    "static.message.forecastingUnitAlreadExists": "Forecasting Unit already exists",
     "static.common.clear": "Clear",
     "static.tooltip.ForecastThresholdLow": "Used in Compare and Select screen to compare tree forecasts againt consumption forecasts QAT will flag any tree forecasts that are this % below the lowest consumption forecast",
     "static.validNoDoubleSpace.string": "No spaces are allowed at starting & ending of the string, Also no double spaces are allowed in the string",
@@ -2149,6 +2150,7 @@
     "static.ForecastSummary.StockEnd": "Stock (end of Dec 2020)",
     "static.tooltip.actualOrTarget": "The calculator requires actual data for the year before the forecast, the annual targets during the forecast period, and the target for the year after the forecast.",
     "static.supplyPlanFormula.costOfInventoryNote": "Note: If `Include planned shipment` is `yes` - Planned, Submitted, Approved, Shipped, Arrived, Received, On Hold statuses are all included in the projected inventory. If `no`, all above statuses are included except Planned.",
+    "static.common.erpComboboxError": "Fill either ERP planning unit or RO/Order No. to populate data",
     "static.tree.addBranch": "Add Branch",
     "static.tooltip.conversionfactorARU": "How many Alternate Reporting Units are in 1 Planning Unit? e.g. Alternate Reporting Unit = 1 tablet, Planning Unit = bottle of 30 tablets. There are 30 tablets in 1 bottle. There are 30 alternate reporting units in 1 planning unit. Conversion Factor = 30.",
     "static.language.portuguese": "Portuguese",
