--- a/src/assets/img/locales/fr.json
+++ b/src/assets/img/locales/fr.json
@@ -219,6 +219,7 @@
     "static.translations.translations": "Traductions",
     "static.mt.tab1DetailPurpose": "Utilisez cet écran pour lier les expéditions QAT aux commandes ERP pour la première fois. Les utilisateurs verront une liste des expéditions QAT, et lorsque les utilisateurs cliquent sur une seule expédition QAT, ils peuvent alors choisir les commandes ERP auxquelles l'expédition QAT doit être lié.",
     "static.region.capacitycbm": "Volume (m^3)",
+    "static.message.forecastingUnitAlreadExists": "L`unité de prévision existe déjà",
     "static.common.clear": "Effacer",
     "static.tooltip.ForecastThresholdLow": "Utilisé dans l'écran \"Comparaison et sélection\" pour comparer les arbres de prévision avec celles basées sur la consommation. QAT signalera tous les arbres de prévision qui sont d'un certain % en-dessous de la prévision de consommation la plus basse.",
     "static.validNoDoubleSpace.string": "Aucun espace n'est autorisé au début et à la fin de la chaîne. De même, aucun double espace n'est autorisé dans la chaîne",
@@ -2149,6 +2150,7 @@
     "static.ForecastSummary.StockEnd": "Stock (fin décembre 2020)",
     "static.tooltip.actualOrTarget": "Le calculateur nécessite des données réelles pour l`année précédant la prévision, les objectifs annuels pendant la période de prévision et l`objectif pour l`année suivant la prévision.",
     "static.supplyPlanFormula.costOfInventoryNote": "Remarque: Si «Inclure l`expédition planifiée» est «Oui» - les statuts Planifié, Soumis, Approuvé, Expédié, Arrivé, Reçu, et En attente sont tous inclus dans l`inventaire prévu. Si «non», tous les statuts ci-dessus sont inclus sauf Planifié.",
+    "static.common.erpComboboxError": "Remplissez soit l`unité de planification ERP, soit le numéro de commande/RO pour renseigner les données.",
     "static.tree.addBranch": "Ajouter une succursale",
     "static.tooltip.conversionfactorARU": "Combien d’unités de reporting alternatives y a-t-il dans 1 unité de planification ? par exemple. Unité de reporting alternative = 1 comprimé, Unité de planification = flacon de 30 comprimés. Il y a 30 comprimés dans 1 flacon. Il existe 30 unités de reporting alternatives dans 1 unité de planification. Facteur de conversion = 30.",
     "static.language.portuguese": "Portugais",
