--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -2032,7 +2032,7 @@
     "static.procurementAgentPlanningUnit.moqText": "Enter MOQ",
     "static.manualTagging.receipentCountry": "Recipient Country",
     "static.supplyPlan.procAgent": "Proc Agent",
-    "static.whatIf.removePlannedShipmentsNotInLeadTimes": "Remove only those shipments that do not comply with the lead time",
+    "static.whatIf.removePlannedShipmentsNotInLeadTimes": "Remove only planned shipments that do not comply with the lead time",
     "static.extrapolation.ActualConsumption": "Needs at least 24 months of actual consumption data",
     "static.country.country": "Country name (English)",
     "static.budget.budgetDisplayNameText": "Enter Budget Display Name",
@@ -3266,7 +3266,7 @@
     "static.scenarioPlanning.changeAMC":"Change AMC",
     "static.scenarioPlanning.monthInPastValidation":"Please select Months in Past for AMC",
     "static.scenarioPlanning.monthInFutureValidation":"Please select Months in Future for AMC",
-    "static.whatIf.removePlannedShipments": "Remove all Planned shipments",
+    "static.whatIf.removePlannedShipments": "Remove Planned shipments",
     "static.tree.deleteScenario": "Delete Scenario",
     "static.tree.showOnlyActive": "Show Only Active",
     "static.tree.showInactive": "Show Inactive",
