--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3272,7 +3272,7 @@
     "static.tree.showInactive": "Show Inactive",
     "static.import.doNoImportCheckbox":"Toggle do not import",
     "static.shipment.budgetWarning1":"The budget",
-    "static.shipment.budgetWarning2":") is going over budget by $",
+    "static.shipment.budgetWarning2":") will be over budget by $",
     "static.shipment.budgetWarning3":"if you submit.",
     "static.shipment.budgetWarning4":"Do you want to continue?",
     "static.organisation.organisationcodemax10digittext": "Display name length should be 10 characters long",
