--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3246,7 +3246,7 @@
     "static.importIntoSP.dataExists": "Data already exists in Supply Plan Program",
     "static.importIntoSP.dataExistsGray": "Data exists in Supply Plan Program and is past {{month}} months, so it cannot be imported.",
     "static.forecastMonthlyErrorReport.showConsumption": "Show consumption adjusted for stock out?",
-    "static.common.allItemsSelected": "All items are selected",
+    "static.common.allitemsselected": "All items are selected",
     "static.dataSet.forecastingProgramName": "Enter forecasting program name",
     "static.dataSet.forecastPeriodInMonth": "Enter forecast period (months)",
     "static.dataSet.forecastperiodInMonthRequired": "Forecast period should not contain negative number, decimal numbers, characters & special symbols",
