labels generated and version changed

--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -193,9 +193,9 @@
     "static.supplyPlan.noSkip": "No - Do not Include",
     "static.extrapolation.DegreeOfDifferencing": "d or I (degree of differencing)",
     "static.program.realmcountry": "Country",
-    "static.procurementAgentProcurementUnit.approvedToShippedLeadTime": "`Approved to Shipped` Lead Time (months)",
     "static.monthlyForecast.EUAllow": "(EUs) allow users to aggregate data across planning units or forecasting units that are different but have the same equivalency unit. For a further explanation of Equivalency Units, refer to the show guidance in the",
     "static.equivalancyUnit.UserForecasted": "For example, if a user forecasted 10,000 bars of dark chocolate, and 10,000 bars of white chocolate and 14,000 per month, QAT would display 7,000 Treatments for QATitis.",
+    "static.procurementAgentProcurementUnit.approvedToShippedLeadTime": "`Approved to Shipped` Lead Time (months)",
     "static.listTree.nameOfDesiredTemplate": "from a tree template - select the name of the desired template.",
     "static.dashboard.unit": "Unit",
     "static.consumptionDataEntryAndAdjustment.nothingToInterpolate": "There is nothing to interpolate",
@@ -607,6 +607,7 @@
     "static.manualTagging.RONO": "ERP Order #",
     "static.ModelingTransfer.StaticEachMonth": "a static percentage each month (e.g. if the starting month is 30% and the change is +1% each month, next month is 31%, the next is 32%, and so on)",
     "static.commit.duplicateErp": "Duplicate ERP",
+    "static.whatIf.removePlannedShipments": "Remove Planned shipments",
     "static.message.duplicateOrg": "Duplicate organization code",
     "static.extrapolation.RangeOfObserved": "Stationary, where the range of observed values over time hover around an average. Models applied to such datasets may include",
     "static.supplyPlanFormula.inventoryTurns5L1": "Update the “plan by” setting in ",
@@ -651,7 +652,7 @@
     "static.compareAndSelect.belowLowestConsumption": "% below the lowest consumption forecast.",
     "static.extrapolation.MoreSensitive": "More sophisticated models are more sensitive to problems in the data",
     "static.common.listtree": "List Tree",
-    "static.dataentry.stockedOutPer": "Stockout Rate",
+    "static.dataentry.stockedOutPer": "Stockout Rate (%)",
     "static.tree.asA%OfParent": "as a % of parent",
     "static.dataEntryAndAdjustments.StockOutDays": "Stocked Out (days)",
     "static.common.accept": "Accept",
@@ -1084,8 +1085,8 @@
     "static.tooltip.Transfercloumn": "Link the changes in this node to the changes in another node in the same level. If a row is greyed out, edit on source (or 'from') node.",
     "static.currency.currencycodetext": "Enter currency display name",
     "static.supplyPlan.suggestedShipments": "QAT Suggested Shipments",
-    "static.setupprogram.ShippedtoArrived": "Shipped to Arrived",
     "static.versionSettings.usedInThe": "used in the",
+    "static.setupprogram.ShippedtoArrived": "Shipped to Arrived",
     "static.supplyPlanFormula.whenToSuggest": "When to suggest order",
     "static.dataEntryAndAdjustments.UnderReporting": "Adjust for under-reporting",
     "static.productCategory.productCategoryTree": "Planning Unit Category Tree",
@@ -1110,10 +1111,12 @@
     "static.supplyPlanFormula.inventoryTurns2L8": "If no definitive mode can be found based on above rules, then Program level inv turns will be the average of all PU inventory turns under that program",
     "static.datasourcetype.datasourcetype": "Data source type",
     "static.supplyPlanFormula.inventoryTurns2L5": "If the count of MODE Value < 3 (variable setting), QAT uses AVG, if the count of the MODE value is  > 3 (variable setting), then",
+    "static.scenarioPlanning.tab1": "Scenario Supply Plan",
     "static.supplyPlanFormula.inventoryTurns2L4": "First option is to look for a mode.",
     "static.modelingCalculator.confirmAlert": "Do you want to replace the existing table ?",
     "static.supplyPlanFormula.inventoryTurns2L7": "If above condition (20%) is found multiple times in the dataset, QAT to use the LOWEST inv. turns mode of the set (Example:, Program contains 100 PUs; 60 PUs have different turns; 20 PUs have inv turns = 1.2, another 20 PUs have inv. turns = 2.5; QAT will display 1.2  as the inv. turns for that program)",
     "static.supplyPlanFormula.inventoryTurns2L6": "The mode will be determined if the value occurs in at least 20% (variable setting), of the program's total number of planning units. (Example: program contains 100 PUs, 20 of those have turns = 1.2 and the rest all have different turns; so the turns for the program will be 1.2)",
+    "static.scenarioPlanning.tab2": "Local/Server Supply Plan - v",
     "static.tooltip.SemiAverages": "Semi-average estimates trends based on two halves of a series. QAT divides the actual data into two equal parts (halves) and the arithmetic mean of the values of each part (half) is calculated as the y values of two points on a line. The slope of the trend line is determined by the difference between these y values over time as defined by the midpoints of the two halves of the series or x values of the points. See Show Guidance for more.",
     "static.QATForecastImport.MultiRegion": "Multi-region forecast to multi-region supply plan",
     "static.whatIf.validScenario": "Select Scenario",
@@ -1513,6 +1516,7 @@
     "static.formula.suggestedText41": "Unmet Demand for N = 0",
     "static.formula.suggestedText42": "MOS for N (Jan 2022) = 0; MOS for N+1 (Feb 2022) = 0; MOS for N+2 (March 2022) = 13",
     "static.formula.suggestedText43": "Suggest a shipment? :",
+    "static.scenarioPlanning.monthInPastValidation": "Please select Months in Past for AMC",
     "static.dashboard.budgetheader": "Budgets",
     "static.extrapolation.Multiplicative": "Holt-Winters Multiplicative Model Without Trend. The models suggested here are neither exhaustive nor exclusive. QAT enables the user to apply a variety of extrapolation methods and then to compare them using best fit or forecast error metrics.",
     "static.dataentry.dataType": "Data Type",
@@ -1817,7 +1821,7 @@
     "static.realm.orderFrequency": "Order interval",
     "static.mt.tab1Purpose": "Use this screen to link QAT shipments with ERP orders for the first time",
     "static.extrapolation.Organized": "Forecast methods in QAT are organized from simple to sophisticated. In general,",
-    "static.dataEntryAndAdjustments.ReportingRate": "Reporting Rate",
+    "static.dataEntryAndAdjustments.ReportingRate": "Reporting Rate (%)",
     "static.jexcel.pages": "Pages",
     "static.problemReport.supplyPlanStatus": "Supply Plan Status",
     "static.supplyPlan.qtyCalculator": "Quantity Calculator",
@@ -2004,8 +2008,8 @@
     "static.common.compare": "Compare",
     "static.shipment.plannedShipment": "Planned Shipment",
     "static.commitTree.puThatDoesNotAppearOnSelectedForecastTree": "Planning unit(s) that do not appear on any selected trees",
-    "static.editStatus.validCriticality": "Please select Criticality",
     "static.supplyPlan.supplyPlanForV": "Server Supply Plan - V",
+    "static.editStatus.validCriticality": "Please select Criticality",
     "static.unkownError": "Unknown error occurred",
     "static.versionSettings.versionSettings": "Version Settings",
     "static.QATForecastImport.South": "South",
@@ -2032,7 +2036,7 @@
     "static.procurementAgentPlanningUnit.moqText": "Enter MOQ",
     "static.manualTagging.receipentCountry": "Recipient Country",
     "static.supplyPlan.procAgent": "Proc Agent",
-    "static.whatIf.removePlannedShipmentsNotInLeadTimes": "Remove all Planned shipments that do not comply with the lead time",
+    "static.whatIf.removePlannedShipmentsNotInLeadTimes": "Remove only planned shipments that do not comply with the lead time",
     "static.extrapolation.ActualConsumption": "Needs at least 24 months of actual consumption data",
     "static.country.country": "Country name (English)",
     "static.budget.budgetDisplayNameText": "Enter Budget Display Name",
@@ -2149,8 +2153,8 @@
     "static.extrapolation.TripleExponentialTextOne": "Raw data is usually spiky. In statistics, different types of smoothing are used to filter out the noise so that we can see patterns in a time series dataset more clearly.",
     "static.ForecastSummary.StockEnd": "Stock (end of Dec 2020)",
     "static.tooltip.actualOrTarget": "The calculator requires actual data for the year before the forecast, the annual targets during the forecast period, and the target for the year after the forecast.",
-    "static.supplyPlanFormula.costOfInventoryNote": "Note: If `Include planned shipment` is `yes` - Planned, Submitted, Approved, Shipped, Arrived, Received, On Hold statuses are all included in the projected inventory. If `no`, all above statuses are included except Planned.",
     "static.common.erpComboboxError": "Fill either ERP planning unit or RO/Order No. to populate data",
+    "static.supplyPlanFormula.costOfInventoryNote": "Note: If `Include planned shipment` is `yes` - Planned, Submitted, Approved, Shipped, Arrived, Received, On Hold statuses are all included in the projected inventory. If `no`, all above statuses are included except Planned.",
     "static.tree.addBranch": "Add Branch",
     "static.tooltip.conversionfactorARU": "How many Alternate Reporting Units are in 1 Planning Unit? e.g. Alternate Reporting Unit = 1 tablet, Planning Unit = bottle of 30 tablets. There are 30 tablets in 1 bottle. There are 30 alternate reporting units in 1 planning unit. Conversion Factor = 30.",
     "static.language.portuguese": "Portuguese",
@@ -2195,6 +2199,7 @@
     "static.integration.integrationValidName": "Enter integration name",
     "static.common.cancel": "Cancel",
     "static.supplyPlan.openingBalance": "Opening Balance",
+    "static.organisation.organisationcodemax10digittext": "Display name length should be 10 characters long",
     "static.program.programadd": "Add program",
     "static.tree.autoCalculate": "Auto Calculate",
     "static.region.duplicateRegion": "Duplicate Region Found",
@@ -2507,6 +2512,7 @@
     "static.dashboard.programdashboard": "Program dashboard",
     "static.common.selectPlanningUnit": "Select Planning Unit",
     "static.listTree.deleteDuplicateExistingTree": "Delete or duplicate existing trees by right clicking on a row",
+    "static.scenarioPlanning.monthInFutureValidation": "Please select Months in Future for AMC",
     "static.forecastingUnit.genericForecastingUnitName": "Generic Name for Forecasting Unit",
     "static.ModelingTransfer.calculatesJanMonth": "QAT calculates this change to be 54.32 in Jan-22 month,",
     "static.manualIntegration.addManualIntegration": "Request JSON",
@@ -2562,6 +2568,7 @@
     "static.supplyPlan.adj": "Adj",
     "static.organisation.organisationcodetext": "Enter Display Name",
     "static.report.forecastErrorMonthlyFormulaNew1": "Forecast Error is calculated using the Weighted Absolute Percentage Error (WAPE). WAPE is used over MAPE (Mean Absolute Percentage Error) as it can account for when consumption is intermittent or low.",
+    "static.scenarioPlanning.changeAMC": "Change AMC",
     "static.pipeline.interpolateMissingValues": "Interpolate Missing values",
     "static.ModelingTransfer.DataTransferred": "If data is transferred to/from a node then extrapolation is not allowed on that node",
     "static.message.user.invalidToken": "Invalid one-time password",
@@ -2648,8 +2655,8 @@
     "static.planningUnit.multiplierLabel": "Conversion Factor (Planning to Forecasting)",
     "static.extrapolation.semiAverages": "Semi-Averages",
     "static.procurementAgentPlanningUnit.volume": "Volume",
-    "static.realmcountry.shippedToArrivedAirLeadTimetext": "Enter `Shipped to Arrived` air lead time (in months)",
     "static.supplyPlanFormula.expiredStockEx2": "Opening Balance for Batch456 (expiry March 21, 2021) = 53",
+    "static.realmcountry.shippedToArrivedAirLeadTimetext": "Enter `Shipped to Arrived` air lead time (in months)",
     "static.supplyPlanFormula.expiredStockEx3": "Expired Stock for March 2021 = 23 + 53 = 76",
     "static.shipment.erpShipment": "ERP-linked shipments",
     "static.supplyPlanFormula.expiredStockEx1": "Opening Balance for Batch123 (expiry March 3, 2021) = 23",
@@ -2783,8 +2790,8 @@
     "static.realm.maxQplTolerance": "Max Qpl Tolerance",
     "static.consumptionDetailHead.consumptionDetail": "Consumption Data",
     "static.message.role.failedBfList": "Could not get business function list",
-    "static.program.shippedToArrivedByAirtext": "Enter `Shipped to Arrived` air lead time (months)",
     "static.CompareSelect.CompareConsumptionForecast": "Compare to Consumption Forecast",
+    "static.program.shippedToArrivedByAirtext": "Enter `Shipped to Arrived` air lead time (months)",
     "static.inventory.adjustmentdetils": "Adjustment details",
     "static.mt.erpHistoryTitle": "ERP Order History",
     "static.ModelingTransfer.NumberNode": "Number nodes can only transfer to other number nodes and must belong to the same level.",
@@ -2975,8 +2982,8 @@
     "static.mt.notificationCount": "Notification Count",
     "static.tree.collapseTree": "Collapse Tree",
     "static.message.invalidStringLength": "Version Notes should not exceed 1000 characters",
-    "static.problemList.problemStatus": "Open / Addressed",
     "static.dashboard.extrapolation": "Extrapolation",
+    "static.problemList.problemStatus": "Open / Addressed",
     "static.procurementUnit.supplier": "Manufacturer",
     "static.program.confirm": "Confirm",
     "static.tooltip.seasonality": "the expected length (in months) of any repetitive pattern in the consumption",
