--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3310,5 +3310,12 @@
     "static.unit.conversionMethod": "Conversion Method",
     "static.alternateReportingUnit.multiply": "Multiply",
     "static.alternateReportingUnit.divide": "Divide",
-    "static.shipmentTooltip.orderQtyPU":"Order Qty (ARU) * Conversion Factor"
+    "static.shipmentTooltip.orderQtyPU":"Order Qty (ARU) * Conversion Factor",
+    "static.momper.tooltip1":"Calculated change is determined by the modeling table above",
+    "static.momper.tooltip2":"= (Previous Month's %) + (Calculated Change +/- %)",
+    "static.momper.tooltip3":"% over or under the average value. Enter a positive % for an increased value in this month or a negative value for a decreased value",
+    "static.momper.tooltip4":"Enter any changes not captured by the modeling table or seasonality index. If the checkbox 'Manual change affects future month' is checked, this change will affect future months. If unchecked, this change will only affect the current month.",
+    "static.momper.tooltip5":"The final % for this node = (% of Population (No Seasonality))*(1+Seasonality Index)+(Manual Change)",
+    "static.momper.tooltip6":"This is the value of the parent node.",
+    "static.momper.tooltip7":"The forecasted value for this node = (% of Parent) * (Parent Value). In other words, it is is the product of the two previous columns."
 }
