--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3322,5 +3322,7 @@
     "static.pu.puNotesTooltip":"Add notes about product phase in/out, data sources, primary funders. etc. Notes will be visible in Supply Plan Report and in Supply Plan Version and Review screen.",
     "static.report.planningUnitNotes":"Planning Unit Notes",
     "static.tree.conversionFUToPU":"FU:PU Conversion Factor",
-    "static.tooltip.conversionFactorPU":"For more details, go to Realm Level Masters > Products > Planning Units. If data looks incorrect, please submit a ticket in the QAT helpdesk."
+    "static.tooltip.conversionFactorPU":"For more details, go to Realm Level Masters > Products > Planning Units. If data looks incorrect, please submit a ticket in the QAT helpdesk.",
+    "static.tooltip.planningUnitSettings":"Program Admins can update Planning Unit Settings under Program Management > Update Planning Unit.",
+    "static.tooltip.planningUnitNotes":"Program Admins can update Planning Unit Notes under Program Management > Update Planning Unit."
 }
